<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

        <RelativeLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/radio1"
                android:id="@+id/radio1image"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:layout_toRightOf="@+id/radio1image"
                android:text="@string/RADIO1"
                android:layout_marginTop="3dp"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:textSize="28sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="120dp"
                android:textSize="20dp"
                android:text="@string/RADIO1subtext"
                android:gravity="bottom"/>

        </RelativeLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp">

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/radio2"
            android:id="@+id/radio2image"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:layout_toRightOf="@+id/radio2image"
            android:text="@string/RADIO2"
            android:layout_marginTop="3dp"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textSize="28sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="120dp"
            android:textSize="20dp"
            android:text="@string/RADIO2subtext"
            android:gravity="bottom"/>

    </RelativeLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/radio3"
            android:id="@+id/radio3image"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio3"
            android:layout_toRightOf="@+id/radio3image"
            android:text="@string/RADIO3"
            android:layout_marginTop="3dp"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textSize="28sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="120dp"
            android:textSize="20dp"
            android:text="@string/RADIO3subtext"
            android:gravity="bottom"/>

    </RelativeLayout>



</LinearLayout>